--- a/login.html/myTunesLogin.html
+++ b/login.html/myTunesLogin.html
@@ -30,9 +30,9 @@
             <a href="#">Forgot your password?</a><br><br>
             <input type="checkbox" id="Remember-me" name="Remember-me">
             <label for="Remember-me">Remember me</label>
-            <button id="button-Login" type="button"><a href="http://127.0.0.1:5501/mainpage.html#"> Login In</a></button>
+            <button id="button-Login" type="button"><a href="http://127.0.0.1:5501/myTunesmainpage.html/mainpage.html"> Login In</a></button>
             <h3>Don't have an account?</h3>
-            <button id="button-4" type="button"><a href="http://127.0.0.1:5501/SignForm.html">Sign up for myTunes<ion-icon name="Signup-myTunes"></ion-icon></a></button><br><br>
+            <button id="button-4" type="button"><a href="http://127.0.0.1:5501/Signup.html/SignForm.html">Sign up for myTunes<ion-icon name="Signup-myTunes"></ion-icon></a></button><br><br>
         </div>
         </form>
         <script src="" async defer></script>
