--- a/myTunes.html/myTunes.html
+++ b/myTunes.html/myTunes.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Tunes.</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="myTunes.css">
     <link rel="stylesheet" media="screen and (max-width; 1248px)" href="Phone.css">
     <link href=link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="stylesheet" href="assets/css/geodatasource-countryflag.css">
@@ -17,7 +17,7 @@
       <li class="item"><a href= "#">Premium </a></li>
       <li class="item"><a href= "#">Download </a></li>
       <li class="item"><a href= "#">Support </a></li>
-      <li class="item"><a href= "http://127.0.0.1:5501/SignForm.html">Sign up</a> </li>
+      <li class="item"><a href= "http://127.0.0.1:5501/Signup.html/SignForm.html">Sign up</a> </li>
       <li class="item"><a href= "http://127.0.0.1:5501/login.html/myTunesLogin.html">Log In </a></li>
     </ul>
 </nav>
@@ -56,7 +56,7 @@
 <section id="Explore-container">
   <div>
     <h1 class="H-Last">Ready? Let's play.</h1>
-    <button id="btn-L" type="button"><a href="http://127.0.0.1:5501/mainpage.html">Get myTunes Free</a></button>
+    <button id="btn-L" type="button"><a href="http://127.0.0.1:5501/myTunesmainpage.html/mainpage.html">Get myTunes Free</a></button>
   </div>
 </section>
 <footer id="footer-container">
