--- a/myTunesmainpage.html/mainpage.html
+++ b/myTunesmainpage.html/mainpage.html
@@ -15,7 +15,7 @@
     <body>
         <nav id="navigation-bar">
             <ul>
-            <li class="item"><a href= "http://127.0.0.1:5501/SignForm.html">Sign up</a> </li>
+            <li class="item"><a href= "http://127.0.0.1:5501/Signup.html/SignForm.html">Sign up</a> </li>
             <li class="item"><a href= "http://127.0.0.1:5501/login.html/myTunesLogin.html">Log In </a></li>
             </ul>  
     </nav>
