--- a/myTunes.html/myTunes.html
+++ b/myTunes.html/myTunes.html
@@ -24,7 +24,7 @@
 <section id="Home">
   <h1 class="H-primary">Play million of songs</h1>
   <h1 class="H-primary">and podcasts, for free.</h1>
-  <button id="btn-F" type="button">Get myTunes Free</button>
+  <button id="btn-F" type="button"><a href ="http://127.0.0.1:5501/myTunesmainpage.html/mainpage.html">Get myTunes Free</a></button>
 </section>
 <section id="Top-container">
   <h1 id="why-myTunes">Why myTunes?</h1>
